# grpc-file-sender

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt
client/: CMakeLists.txt  main.cpp
client/src/: Logger.h  types.h
client/src/FileSender/: Client.cpp  Client.hpp
protos/: sender.proto
scripts/: build.sh  install-build-utils.sh  install-test-utils.sh  run-tests.sh
server/: CMakeLists.txt  main.cpp
server/src/FileReciever/: Server.cpp  Server.h
test/: test.py
